@@ -17,6 +17,7 @@ Version 1.4.4 - CVS
   - Add src/configtest.php script which checks for common errors in the
     config.
   - Fixed forward in new window from search page courtesy of Jason Munro.
+  - Prefs caching didn't work properly with register_globals off (#995102).
 
 Version 1.4.3a - 2 June 2004
 ----------------------------
